--- a/Projects/BRM.BinarySerializers.System/BRM.BinarySerializers.System.csproj
+++ b/Projects/BRM.BinarySerializers.System/BRM.BinarySerializers.System.csproj
@@ -4,12 +4,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F7FF6571-60B8-4CFB-8573-0F00E4F18312}</ProjectGuid>
+    <ProjectGuid>{90338BA6-38F7-4741-B10F-B919870E4506}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BRM.TextSerializers.Interfaces</RootNamespace>
-    <AssemblyName>BRM.TextSerializers.Interfaces</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <RootNamespace>BRM.BinarySerializers</RootNamespace>
+    <AssemblyName>BRM.BinarySerializers.System</AssemblyName>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -39,17 +39,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scripts\ISerializeText.cs" />
+    <Compile Include="Scripts\SystemBinarySerializer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-
+  <ItemGroup>
+    <ProjectReference Include="..\BRM.DataSerializers.Interfaces\BRM.DataSerializers.Interfaces.csproj">
+      <Project>{f7ff6571-60b8-4cfb-8573-0f00e4f18312}</Project>
+      <Name>BRM.DataSerializers.Interfaces</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <_dll Include="$(TargetDir)\$(ProjectName).dll" />
     <_pdb Include="$(TargetDir)\$(ProjectName).pdb" />
   </ItemGroup>
   <Target Name="BeforeBuild" Condition=" '$(Configuration)' == 'Release' ">
-    <Delete Files="@(_dll)"/>
-    <Delete Files="@(_pdb)"/>
+    <Delete Files="@(_dll)" />
+    <Delete Files="@(_pdb)" />
   </Target>
   <Target Name="AfterBuild" Condition=" '$(Configuration)' == 'Release' ">
     <Copy SourceFiles="@(_dll)" DestinationFolder="$(SolutionDir)\Builds\" ContinueOnError="true" SkipUnchangedFiles="false" />
