--- a/Projects/BRM.FileSerializers/BRM.FileSerializers.csproj
+++ b/Projects/BRM.FileSerializers/BRM.FileSerializers.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BRM.FileSerializers</RootNamespace>
     <AssemblyName>BRM.FileSerializers</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -42,28 +42,29 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scripts\FileSerializer.cs" />
-    <Compile Include="Scripts\FileValidator.cs" />
+    <Compile Include="Scripts\BinaryFileSerializer.cs" />
+    <Compile Include="Scripts\TextFileSerializer.cs" />
+    <Compile Include="Scripts\Utilities\FileUtilities.cs" />
+    <Compile Include="Scripts\Utilities\FileValidator.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BRM.DataSerializers.Interfaces\BRM.DataSerializers.Interfaces.csproj">
+      <Project>{f7ff6571-60b8-4cfb-8573-0f00e4f18312}</Project>
+      <Name>BRM.DataSerializers.Interfaces</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BRM.FileSerializers.Interfaces\BRM.FileSerializers.Interfaces.csproj">
       <Project>{ceae32f5-1bab-4764-9a0a-3eaf0503ff8a}</Project>
       <Name>BRM.FileSerializers.Interfaces</Name>
     </ProjectReference>
-    <ProjectReference Include="..\BRM.TextSerializers.Interfaces\BRM.TextSerializers.Interfaces.csproj">
-      <Project>{f7ff6571-60b8-4cfb-8573-0f00e4f18312}</Project>
-      <Name>BRM.TextSerializers.Interfaces</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-
   <ItemGroup>
     <_dll Include="$(TargetDir)\$(ProjectName).dll" />
     <_pdb Include="$(TargetDir)\$(ProjectName).pdb" />
   </ItemGroup>
   <Target Name="BeforeBuild" Condition=" '$(Configuration)' == 'Release' ">
-    <Delete Files="@(_dll)"/>
-    <Delete Files="@(_pdb)"/>
+    <Delete Files="@(_dll)" />
+    <Delete Files="@(_pdb)" />
   </Target>
   <Target Name="AfterBuild" Condition=" '$(Configuration)' == 'Release' ">
     <Copy SourceFiles="@(_dll)" DestinationFolder="$(SolutionDir)\Builds\" ContinueOnError="true" SkipUnchangedFiles="false" />
